src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>AU_Additional_Sub_Agent__c</fullName>
        <description>AU WEX Accident Assist field used to capture the sub agent details of the broker</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Sub agent details of the broker</inlineHelpText>
        <label>Authorised Representative Email</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AU_Licence_Number__c</fullName>
        <description>AU WEX Accident Assist field. Used as part of the Accident Assist product to capture the AFSL Number.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>AFSL Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Division__c</fullName>
        <description>Used for sharing rule to Pardot connector.</description>
        <label>Account Division</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>WEX Payable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <formula>MailingStreet &amp; BR()&amp;
MailingCity &amp; BR()&amp;
MailingState &amp; BR()&amp;
MailingPostalCode &amp;BR()&amp;
MailingCountry</formula>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <description>Used for WEX User Contact record type.</description>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Corporate Development</fullName>
                </value>
                <value>
                    <fullName>Corporate Payments</fullName>
                </value>
                <value>
                    <fullName>Executive</fullName>
                </value>
                <value>
                    <fullName>Facilities</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Fleet NA</fullName>
                </value>
                <value>
                    <fullName>Global Credit Risk Management</fullName>
                </value>
                <value>
                    <fullName>Global Fleet</fullName>
                </value>
                <value>
                    <fullName>Global Fleet - Large Fleet</fullName>
                </value>
                <value>
                    <fullName>Global Fleet - Major Oil</fullName>
                </value>
                <value>
                    <fullName>Global Fleet - Merchant</fullName>
                </value>
                <value>
                    <fullName>Global Fleet - OTR</fullName>
                </value>
                <value>
                    <fullName>Global Fleet - Prod &amp; Mktg</fullName>
                </value>
                <value>
                    <fullName>Global Fleet - Small Fleet</fullName>
                </value>
                <value>
                    <fullName>Global Service Operations</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
                <value>
                    <fullName>Information Technology - Corp</fullName>
                </value>
                <value>
                    <fullName>Information Technology - INTL</fullName>
                </value>
                <value>
                    <fullName>Information Technology - OTR</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>OTR</fullName>
                </value>
                <value>
                    <fullName>WEX Health</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Carrier_Id__c</fullName>
        <formula>Account.Carrier_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Carrier Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Companies_House_Check__c</fullName>
        <label>Companies House Check</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <inlineHelpText>Internal = Wex employee</inlineHelpText>
        <label>Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AA</fullName>
                </value>
                <value>
                    <fullName>Accounts Payable</fullName>
                </value>
                <value>
                    <fullName>BR</fullName>
                </value>
                <value>
                    <fullName>Business Owner</fullName>
                </value>
                <value>
                    <fullName>Card Delivery</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Credit Limit Alert</fullName>
                </value>
                <value>
                    <fullName>Email Delivery</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
                <value>
                    <fullName>FC</fullName>
                </value>
                <value>
                    <fullName>Financial Controller</fullName>
                </value>
                <value>
                    <fullName>Integrator</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Invoice Delivery</fullName>
                </value>
                <value>
                    <fullName>MC</fullName>
                </value>
                <value>
                    <fullName>No influence</fullName>
                </value>
                <value>
                    <fullName>PC</fullName>
                </value>
                <value>
                    <fullName>PIN Mailer</fullName>
                </value>
                <value>
                    <fullName>Standard Contact</fullName>
                </value>
                <value>
                    <fullName>Supplier</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>From_Radius__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to indicate if contact came from Radius for WES Contacts</description>
        <label>From Radius?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GoogleSearchContact__c</fullName>
        <formula>HYPERLINK(&quot;https://www.google.com/search?q=&quot;
										&amp;FirstName&amp;&quot;+&quot;
										&amp;LastName&amp;&quot;+&quot;
										&amp;Account.Name&amp;&quot;+&quot;
										&amp;MailingCity&amp;&quot;+&quot;
										&amp;MailingState&amp;&quot;+&quot;
										&amp;MailingCountry,
										 &quot;Search for &quot;&amp;FirstName&amp;&quot; &quot;
										&amp;LastName)</formula>
        <label>Google Search Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hire_Start_Date__c</fullName>
        <description>Used for WEX User Contact record type.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Hire Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HomeAddress__c</fullName>
        <formula>Home_Address_1__c &amp; BR()
&amp;IF(NOT(ISBLANK(Home_Address_2__c)),Home_Address_2__c &amp; BR(), NULL)
&amp;IF(NOT(ISBLANK(Home_Address_3__c)),Home_Address_3__c &amp; BR(), NULL)
&amp;Home_Address_City__c &amp; BR()
&amp;TEXT(WES_Home_Country_Code__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Home Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Address_3__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Home Address 3</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used for AU WEX Accident Assist. Lookup relationship to a lead.</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Number__c</fullName>
        <description>This field stores the auto generated number from the converted lead record</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Lead Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Name__c</fullName>
        <description>Used for WEX User Contact record type.</description>
        <label>Location Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AU PrePaid Cards</fullName>
                </value>
                <value>
                    <fullName>AU Pty LTD</fullName>
                </value>
                <value>
                    <fullName>BR - Salvador</fullName>
                </value>
                <value>
                    <fullName>CA EFS</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>EU Crewe</fullName>
                </value>
                <value>
                    <fullName>EU EMI</fullName>
                </value>
                <value>
                    <fullName>EU Netherlands</fullName>
                </value>
                <value>
                    <fullName>EU WEX Europe</fullName>
                </value>
                <value>
                    <fullName>NZ Auckland</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
                <value>
                    <fullName>US Ben Omaha</fullName>
                </value>
                <value>
                    <fullName>US Chanhassen</fullName>
                </value>
                <value>
                    <fullName>US Chantilly</fullName>
                </value>
                <value>
                    <fullName>US Columbus</fullName>
                </value>
                <value>
                    <fullName>US E1 Fargo Campus</fullName>
                </value>
                <value>
                    <fullName>US E1 Hartford Campus</fullName>
                </value>
                <value>
                    <fullName>US E1 Minneapolis Campus</fullName>
                </value>
                <value>
                    <fullName>US E1 St. Louis Campus</fullName>
                </value>
                <value>
                    <fullName>US Gulf Breeze</fullName>
                </value>
                <value>
                    <fullName>US Louisville</fullName>
                </value>
                <value>
                    <fullName>US Maine Darling</fullName>
                </value>
                <value>
                    <fullName>US Maine Long Creek</fullName>
                </value>
                <value>
                    <fullName>US Memphis</fullName>
                </value>
                <value>
                    <fullName>US Midvale WEX Bank</fullName>
                </value>
                <value>
                    <fullName>US Morgantown</fullName>
                </value>
                <value>
                    <fullName>US Nashville</fullName>
                </value>
                <value>
                    <fullName>US Ogden</fullName>
                </value>
                <value>
                    <fullName>US PortlandME</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MerchantID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MerchantID</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_Number__c</fullName>
        <description>temp field for WEX user contact import</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Person Number</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Phone_Opt_Out_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Phone Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pilot_Flag__c</fullName>
        <formula>OR( 
If( RecordTypeId = $Setup.Support_Operation_Settings__c.PilotContactRecordTypeID__c, True, False), 
If( RecordTypeId = $Setup.Support_Operation_Settings__c.PilotContactRecordTypeID2__c, True, False) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Flag to identify the Service Operation Pilot Accounts</inlineHelpText>
        <label>Pilot Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used for WEX User Contact record type.</description>
        <label>SVP</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only contacts with the WEX User Contact record type can be selected.</errorMessage>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <valueField>$Source.RecordTypeId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts (SVP)</relationshipLabel>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ShellExternalID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>ShellExternalID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Total_Hours_Trained__c</fullName>
        <description>Summary of all Training Events Length values.</description>
        <inlineHelpText>Summary of all Training Events Length values (all time).</inlineHelpText>
        <label>Total Hours Trained</label>
        <summarizedField>Training_Event__c.Actual_Participation_Hours__c</summarizedField>
        <summaryForeignKey>Training_Event__c.Attendee__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>WES_Application_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used for Credit Checks for Partners and Trustees.</description>
        <label>WES Application Partner or Trustee</label>
        <referenceTo>WES_Application_Request__c</referenceTo>
        <relationshipLabel>WES Application Partner or Trustee</relationshipLabel>
        <relationshipName>ApplicationPartner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WES_Home_Country_Code__c</fullName>
        <label>Home Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WES_Role__c</fullName>
        <label>Role within Company</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Assistant/PA</fullName>
                </value>
                <value>
                    <fullName>Buyer</fullName>
                </value>
                <value>
                    <fullName>CEO</fullName>
                </value>
                <value>
                    <fullName>Company secretary</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Individual/Non Company</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Owner</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Trustee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zzID__c</fullName>
        <description>reference for Data Loading updates/fixes</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>zzID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Contact_ownership_cleanup</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.WEX_User_Contact</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>beattie</value>
        </filters>
        <label>Contact ownership cleanup</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>EU_Travel_France_ABM</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>EU Travel France - ABM</label>
        <language>en_US</language>
        <sharedTo>
            <group>Wex_Europe</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Contacts_Corporate_Payments</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Corporate_Payments</value>
        </filters>
        <label>CP -My Contacts - Corporate Payments</label>
        <sharedTo>
            <role>Corporate_Payments_Relationship_Management_NA</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Training_Contacts_w_o_emails</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.REPORTS_TO.NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.EMAIL</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.WEX_User_Contact</value>
        </filters>
        <label>*Training Contacts w/o emails</label>
        <sharedTo>
            <role>LearningandDevelopment</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>WES_All_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.WES_Contacts</value>
        </filters>
        <label>WES - All Contacts</label>
    </listViews>
    <listViews>
        <fullName>WEX_User_Contacts_Records</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.REPORTS_TO.NAME</columns>
        <columns>Hire_Start_Date__c</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.WEX_User_Contact</value>
        </filters>
        <label>WEX User Contacts Records</label>
        <sharedTo>
            <group>Global_Training_Group</group>
            <group>Sales_Training</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>AU_Contact</fullName>
        <active>true</active>
        <description>Australia Contact</description>
        <label>AU Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Admin_Contact</fullName>
        <active>true</active>
        <description>Use so system admin can see all the fields</description>
        <label>Admin Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Corporate_Pay</fullName>
        <active>true</active>
        <description>CorporatePay Contact Record Type</description>
        <label>Corporate_Pay</label>
    </recordTypes>
    <recordTypes>
        <fullName>Corporate_Payments</fullName>
        <active>true</active>
        <label>Corporate Payments</label>
    </recordTypes>
    <recordTypes>
        <fullName>EMAP_Contact</fullName>
        <active>true</active>
        <label>EMAP Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>F1_Contact</fullName>
        <active>true</active>
        <description>Standard contact record</description>
        <label>Standard Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>F1_SFDC_User_Contact</fullName>
        <active>true</active>
        <description>For F1 SFDC Users -- for logging internal support cases</description>
        <label>F1 SFDC User Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Factoring_Contacts</fullName>
        <active>true</active>
        <description>Contacts used by the Factoring Sales team and syncd with Factoring Pardot instance</description>
        <label>Factoring Contacts</label>
    </recordTypes>
    <recordTypes>
        <fullName>Revolver</fullName>
        <active>true</active>
        <description>A Contact Type For Revolver Records</description>
        <label>Revolver</label>
    </recordTypes>
    <recordTypes>
        <fullName>Service_Operations</fullName>
        <active>true</active>
        <label>Service Operations</label>
    </recordTypes>
    <recordTypes>
        <fullName>Truckers_Contacts</fullName>
        <active>true</active>
        <label>Truckers Contacts</label>
    </recordTypes>
    <recordTypes>
        <fullName>Virtual</fullName>
        <active>true</active>
        <label>Virtual</label>
    </recordTypes>
    <recordTypes>
        <fullName>WES_Contacts</fullName>
        <active>true</active>
        <description>Contacts for WES</description>
        <label>WES Contacts</label>
    </recordTypes>
    <recordTypes>
        <fullName>WEX_User_Contact</fullName>
        <active>true</active>
        <description>Create WEX employee contact records that can be associated with Training Classes</description>
        <label>WEX User Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>WE_Integrator</fullName>
        <active>true</active>
        <label>WE Integrator</label>
    </recordTypes>
</CustomObject>